...
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/edit_myprofile_firstname"
            android:hint="First name"
            android:layout_gravity="center"
            android:singleLine="true"
            android:alpha="0.54"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/edit_myprofile_lastname"
            android:hint="Last name"
            android:layout_gravity="center"
            android:singleLine="true"
            android:alpha="0.54"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/edit_myprofile_location"
            android:hint="Location"
            android:layout_gravity="center"
            android:singleLine="true"
            android:alpha="0.54"/>


...
            android:text="Birthday"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/edit_myprofile_birthdate"
            android:drawableRight="@android:drawable/ic_menu_today"
            android:background="?attr/editTextBackground"
            android:gravity="bottom"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:alpha="0.54"
            android:onClick="editmyprofile_birthdate" />
...
        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/edit_myprofile_gender"
            android:alpha="0.38"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

...
            android:alpha="0.54"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/btn_edit_myprofile" />-->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_btn_edit_myprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_done_white_18dp"
...
