<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="de.ticket_match.ticketmatch.MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#2196F3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/tm_logo"
                    android:layout_margin="10dp"
                    android:onClick="btn_website"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TicketMatch"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:alpha="0.12"/>
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/login_mail"
                android:hint="E-Mail"
                android:layout_gravity="center"
                android:singleLine="true"
                android:alpha="0.54"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:id="@+id/login_password"
                android:hint="Password"
                android:layout_gravity="center"
                android:singleLine="true"
                android:alpha="0.54"/>

            <Button
                android:text="Login"
                android:layout_width="wrap_content"
                android:id="@+id/btn_login"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="btn_login"
                android:alpha="0.54" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <View
                android:layout_width="250dp"
                android:layout_height="1dp"
                android:background="#222222"
                android:layout_gravity="center"
                android:alpha="0.12"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:text="Forgot Account?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="tv_forgot_account"
                android:id="@+id/textView2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#2196F3"
                android:alpha="0.54"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:text="No account yet? Register!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="btn_activity_register"
                android:id="@+id/textViewRegister"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#2196F3"
                android:alpha="0.54"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</android.widget.RelativeLayout>
