...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="Type your description!"
                    android:ems="10"
                    android:layout_gravity="bottom"
                    android:id="@+id/newrating_text"
                    android:alpha="0.38"
                    />

                </LinearLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_done_white_18dp"
...
