...

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You currently chat with ..."
                android:layout_marginLeft="10dp"
                android:id="@+id/chat_with_name"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="wrap_content"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Your Message"
                android:ems="10"
                android:layout_gravity="bottom"
                android:id="@+id/messageInput"
                android:layout_weight="1"
                android:alpha="0.54"
                />

           <!-- <Button
                android:text="Send"
...
