...
                    android:alpha="0.54"/>


                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/foreignprofile_rating"
                    android:rating="0"
                    android:stepSize="0.5"
                    android:numStars="5"
                    android:isIndicator="true"
                    android:alpha="0.54"/>

...
